[package]
name = "ja3-rustls"
description = "Extract JA3 TLS fingerprints from a slice bytes, working with Rustls types"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = {version = "0.4", optional = true}
itertools = "0.10.4"
md-5 = {version = "0.10", optional = true}
rustls = {version = "0.20", features = []}

[features]
# default = ["md5-string"]
md5 = ["md-5"]
md5-string = ["md-5", "hex"]

[dev-dependencies]
hex-literal = "0.3"
